javabluenv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappdeploymentblue
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8s-boot-demo
      version: v1
      color: blue
  template:
    metadata:
      labels:
        app: k8s-boot-demo
        version: v1
        color: blue
    spec:
      containers:
      - name: javawebappcontainerblue
        image: ashokit/javawebapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
