javagreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-boot-demo-green
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8s-boot-demo
      version: v2
      color: green
  template:
    metadata:
      labels:
        app: k8s-boot-demo
        version: v2
        color: green
    spec:
      containers:
      - name: k8s-boot-2
        image: satishkumarpanda/newapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
