javawebapppod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: javawebapppod
  labels:
     app: javawebapp
spec:
  containers:
    - name: javawebappcontainer
      image: ashokit/javawebapp
      ports:
        - name: web
          containerPort: 8080
