javawebappdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappdeployment
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8s-boot-demo
      version: v1
      color: blue
  template:
    metadata:
      labels:
        app: k8s-boot-demo
        version: v1
        color: blue
    spec:
      containers:
      - name: javawebappcontainer
        image: ashokit/javawebapp
        imagepullpolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: javawebapp
spec:
  selector:
    app: k8s-boot-demo
  ports:
   - port: 80
     targetPort: 8080
  type: NodePort
