javawebapprc.yaml
apiVersion: v1
kind: Service
metadata:
  name: javawebapp
spec:
  type: NodePort
  selector:
    app: javawebapp
  ports:
   - port: 80
     targetPort: 8080
