javawebappsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-boot-demo-svc
spec:
  type: NodePort
  selector:
    app: k8s-boot-demo
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30380
